Tried making my own CSS with my index.html, it went well. Looks similar to the one in WebStuff. Most elements have fixed position, except the area where Code Boxes are put in. That area can overflow with vertical scrolling

--- a/moseCSS.css
+++ b/moseCSS.css
@@ -5,9 +5,13 @@
 textarea {
     resize: none;
 }
+
+button:focus {
+    outline:0;
+}
 #textbox {
     width: calc(100vw - 30px);
-    height: calc(25vh - 30px);
+    height: calc(20vh - 30px);
     transform: translate(15px, 15px);
 }
 
